# micro-search

./: .npmignore  Cargo.toml  LICENSE  README.md  buggu.linux-x64-gnu.node  index.d.ts  index.js  package-lock.json  package.json  test.js  tll.rs
.github/: build.yml
.github/workflows/: build.yml
examples/: stress_demo.rs
pop/: log_bench.rs
src/: build.rs  codec.rs  config.rs  lib.rs  logdb.rs  main.rs  query.rs  types.rs  ufhg.rs
src/utils/: buggu_hash_set.rs  buggu_random_generator.rs  buggu_ultra_fast_hash.rs  mod.rs
tests/: stress_tests.rs
