[package]
name = "buggu"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast in-memory search engine with microsecond queries"
license = "MIT"
repository = "https://github.com/AnchitSingh/LogDB"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = "1.11"
omega = {path = "../omega"}

[[example]]
name = "stress_demo"
path = "examples/stress_demo.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
