[package]
name = "buggu"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast in-memory search engine with microsecond queries"
license = "MIT"
repository = "https://github.com/AnchitSingh/micro-search"

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = "1.11"

# Add NAPI-RS
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.16.13" }

[build-dependencies]
napi-build = "2.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
